# Machine-Learning-KCL-CW2

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: submission_full_notebook.ipynb
results/metrics/: aggregated_metrics.csv  aggregated_metrics_main.csv  aggregated_metrics_main_pivot_best.csv  aggregated_metrics_modification.csv  aggregated_metrics_modification_pivot_best.csv  aggregated_metrics_pivot_best.csv  metrics.csv  stats_summary.csv
scripts/: aggregate_results.py  make_plots.py  run_experiments.py  run_stats.py  train_simclr.py
src/: clustering.py  config.py  data.py  embeddings.py  evaluate.py  experiment.py  models.py  seed.py  selectors.py  simclr.py  train_classifier.py  typicality.py
